--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ matplotlib = "^3.2.1"
 seaborn = "^0.10.1"
 jupyterlab = "^2.1.1"
 scikit-learn = "^0.22.2"
+hyperopt = "^0.2.4"
+hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn.git"}
 
 [tool.poetry.dev-dependencies]
 
