--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jupyterlab = "^2.1.1"
 scikit-learn = "^0.22.2"
 hyperopt = "^0.2.4"
 hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn.git"}
+yellowbrick = "^1.1"
 
 [tool.poetry.dev-dependencies]
 
