--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ scikit-learn = "^0.22.2"
 hyperopt = "^0.2.4"
 hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn.git"}
 yellowbrick = "^1.1"
+nltk = "^3.5"
 
 [tool.poetry.dev-dependencies]
 
